# swec

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
src/: lib.rs
